--- a/css/tanaman.css
+++ b/css/tanaman.css
@@ -266,3 +266,11 @@ body {
     background-color: #f44336;
     color: white;
 }
+
+.form-container img {
+    margin-top: 10px;
+    border: 1px solid #ddd;
+    padding: 5px;
+    background: #f9f9f9;
+    border-radius: 5px;
+}
