--- a/css/profile.css
+++ b/css/profile.css
@@ -295,7 +295,7 @@ body {
   transition: background-color 0.3s, color 0.3s;
 }
 
-.tab.active {
+.tab:hover {
   background-color: #238002;
   color: #fff;
 }
