--- a/css/profile.css
+++ b/css/profile.css
@@ -283,6 +283,27 @@ body {
   margin-bottom: 20px;
 }
 
+.profile-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+.profile-header img {
+  width: 150px; /* merubah ukuran image*/
+  height: 150px; /* merubah ukuran image*/
+}
+.profile-header .btn {
+  margin-top: 10px;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border: 2px solid #238002;
+}
+.profile-header .btn:first-of-type {
+  margin-right: 5px;
+}
+
 .tab {
   background-color: #fff;
   color: #238002;
