--- a/css/diskusi.css
+++ b/css/diskusi.css
@@ -231,3 +231,28 @@ body {
 .tags ul li {
   margin-bottom: 5px;
 }
+
+.dashboard-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px;
+}
+
+.diskusi-header button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: #4b6252;
+  color: #fff;
+  cursor: pointer;
+}
+
+.diskusi-header button:hover {
+  background-color: #6d8369;
+}
+
+.input-container {
+  display: flex;
+  gap: 10px;
+}
