--- a/css/tambahTanaman.css
+++ b/css/tambahTanaman.css
@@ -134,7 +134,6 @@ body {
   align-items: center;
 }
 
-
 .user-account {
   margin-top: auto;
   padding: 12px 10px;
@@ -212,6 +211,7 @@ main {
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
+  width: 100%;
 }
 
 button {
@@ -221,6 +221,7 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  width: 100%;
 }
 
 button:hover {
@@ -229,18 +230,12 @@ button:hover {
 
 /* Layout Adjustments for Form */
 .form-section {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 
-.form-group {
-  margin-bottom: 10px;
-}
-
 button {
-  grid-column: span 2;
   justify-self: start;
   align-self: center;
-  width: 100px;
 }
