--- a/css/tanaman.css
+++ b/css/tanaman.css
@@ -327,6 +327,12 @@ body {
   margin-top: 10px;
 }
 
+.buttons-form {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
 .btn-add,
 .btn-save,
 .btn-cancel,
