--- a/css/kelas2.css
+++ b/css/kelas2.css
@@ -12,7 +12,7 @@ body {
 
 .sidebar {
     width: 300px;
-    background-color: #f4f4f4;
+    background-color: #4e8331;
     padding: 20px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     position: fixed;
