--- a/css/tanaman.css
+++ b/css/tanaman.css
@@ -354,6 +354,28 @@ body {
   color: white;
 }
 
+.btn-scan {
+  padding: 0px 10px 0px 10px;
+  height: 100%;
+  width: 100px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #49b16f;
+  color: white;
+}
+
+.btn-load {
+  padding: 0px 10px 0px 10px;
+  height: 100%;
+  width: 100px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #49b16f;
+  color: white;
+}
+
 .btn-save {
   background-color: #4caf50;
   color: white;
@@ -377,4 +399,31 @@ body {
   padding: 12px 20px;
   resize: none;
   margin-top: 10px;
+}
+
+.image-up{
+  display: flex;
+  gap: 5px;
+  width: 400px;
+}
+
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: #49b16f;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: background .2s ease-in-out;
+}
+
+input[type=file] {
+  width: 350px;
+  max-width: 100%;
+  color: #444;
+  padding: 5px;
+  background: #fff;
+  border-radius: 10px;
+  border: 1px solid #555;
 }
