--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -193,6 +193,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 10px;
 }
 
 .user-info {
@@ -242,6 +243,8 @@ body {
   display: flex;
   gap: 15px;
   overflow-x: auto;
+  scroll-snap-type: x mandatory; /* Mengaktifkan carousel */
+  padding-bottom: 10px;
 }
 
 .card {
@@ -249,6 +252,9 @@ body {
   padding: 15px;
   border-radius: 8px;
   min-width: 200px;
+  flex: 0 0 calc(25% - 15px); /* 25% width minus gap for 4 cards per row */
+  box-sizing: border-box;
+  scroll-snap-align: start; /* Setiap card akan align dengan container saat scroll */
 }
 
 .card img {
@@ -285,91 +291,9 @@ body {
   border-radius: 50%;
 }
 
-.intro {
-  background-color: #2d523d;
+.no-data {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #888;
   padding: 20px;
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.intro h2 {
-  margin: 0;
-}
-
-.intro button {
-  background-color: #99ad9a;
-  color: #fff;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.content, .your-classes, .user-stats {
-  margin-bottom: 20px;
-}
-
-.section-title h3 {
-  margin: 0 0 10px 0;
-}
-
-.modules, .classes {
-  display: flex;
-  justify-content: space-around;
-}
-
-.module, .class {
-  background-color: #ffffff;
-  padding: 10px;
-  width: 30%;
-  text-align: center;
-}
-
-.module img, .class img {
-  max-width: 100%;
-}
-
-.profile {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.profile img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-.profile h1 {
-  font-size: 25px;
-  margin: 10px 0;
-}
-.stats {
-  margin: 20px 0;
-}
-.progress {
-  display: flex;
-  justify-content: center;
-}
-.progress .item {
-  background-color: #ffffff;
-  padding: 10px;
-  width: 10%;
-  text-align: center;
-}
-.progress img {
-  width: 50px;
-  height: 50px;
-  border-radius: 10px;
-}
-.progress .progress-bar {
-  width: 100%;
-  background-color: #dfdfdf;
-  border-radius: 5px;
-  overflow: hidden;
-  margin-top: 5px;
-}
-.progress .progress-bar div {
-  height: 10px;
-  background-color: #4caf50;
 }
