--- a/css/tanaman.css
+++ b/css/tanaman.css
@@ -17,7 +17,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 100vh;
   width: 85px;
   display: flex;
   overflow-x: hidden;
@@ -107,190 +107,323 @@ body {
 }
 
 .main-content {
-    margin-left: 80px; /* Sesuaikan margin saat sidebar tertutup */
-    padding: 20px;
-    width: calc(100% - 80px);
-    transition: margin-left 0.3s, width 0.3s;
-  }
-  
-  .sidebar:hover ~ .main-content {
-    margin-left: 260px; /* Sesuaikan margin saat sidebar terbuka */
-    width: calc(100% - 260px);
-  }
+  margin-left: 80px; /* Sesuaikan margin saat sidebar tertutup */
+  padding: 20px;
+  width: calc(100% - 80px);
+  transition: margin-left 0.3s, width 0.3s;
+}
 
-  .sidebar:hover .user-account {
-    background: #fff;
-    border-radius: 4px;
-  }
+.sidebar:hover ~ .main-content {
+  
+}
+
+.sidebar:hover .user-account {
+  background: #fff;
+  border-radius: 4px;
+}
 
 .sidebar-links li a:hover {
   color: #161a2d;
   background: #fff;
   border-radius: 4px;
 }
+
 .dashboard-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+
+.dashboard-header h1 a {
+  color: inherit; /* Inherit color from parent */
+  text-decoration: none; /* Remove underline */
+  pointer-events: none; /* Disable the link functionality */
+}
+
+.dashboard-header h1 a:hover,
+.dashboard-header h1 a:visited,
+.dashboard-header h1 a:active {
+  color: inherit; /* Ensure no color change */
+  text-decoration: none; /* Ensure no text decoration */
 }
 
 .user-account {
-    margin-top: auto;
-    padding: 12px 10px;
-    margin-left: -10px;
-  }
-  
-  .user-profile {
-    display: flex;
-    align-items: center;
-    color: #161a2d;
-  }
-  
-  .user-profile img {
-      width: 42px;
-      border-radius: 50%;
-      border: 2px solid #fff;
-    }
-  
-  .user-profile h3 {
-    font-size: 1rem;
-    font-weight: 600;
-  }
-  
-  .user-profile span {
-    font-size: 0.775rem;
-    font-weight: 600;
-  }
-  
-  .user-detail {
-    margin-left: 23px;
-    white-space: nowrap;
-  }
+  margin-top: auto;
+  padding: 12px 10px;
+  margin-left: -10px;
+}
+
+.user-profile {
+  display: flex;
+  align-items: center;
+  color: #161a2d;
+}
+
+.user-profile img {
+  width: 42px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+
+.user-profile h3 {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.user-profile span {
+  font-size: 0.775rem;
+  font-weight: 600;
+}
+
+.user-detail {
+  margin-left: 23px;
+  white-space: nowrap;
+}
 
 .content-section {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .intro-section {
-    background: #2d523d;
-    color: white;
-    padding: 20px;
-    margin: 20px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background: #2d523d;
+  color: white;
+  padding: 20px;
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.progress-chart img {
-    width: 100%;
-}
-
-.statistik-kamu {
-    background: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.statistik-content {
-    display: flex;
-    justify-content: space-between;
-}
-
-.statistik-content p {
-    margin: 5px 0;
-}
-
-.statistik-cards {
-    display: flex;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.card {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.card h3 {
-    margin-top: 10px;
-}
-
-.daftar-tanaman {
-    background: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.card-container {
-    display: flex;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.card-container .card {
-    flex: 1;
-    background: white;
-    padding: 50px;
-    border-radius: 10px;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.plant-image {
+  flex: 1;
+  text-align: center;
 }
 
 .plant-image img {
-    width: 540px;
-    height: auto;
+  width: 100%;
+  height: auto;
+}
+
+.plant-description {
+  flex: 1;
+  margin-left: 20px;
+}
+
+.intro-text {
+  display: flex;
+  align-items: center;
+}
+
+.progress-chart img {
+  width: 100%;
+}
+
+.statistik-kamu {
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.statistik-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.statistik-content p {
+  margin: 5px 0;
+}
+
+.statistik-cards {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.card {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.card h3 {
+  margin-top: 10px;
+}
+
+.daftar-tanaman {
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.card-container {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.card-container .card {
+  flex: 1;
+  background: white;
+  padding: 50px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .progress-table {
-    width: 100%;
-    margin-top: 20px;
-    border-collapse: collapse;
+  width: 100%;
+  margin-top: 20px;
+  border-collapse: collapse;
 }
 
 .progress-table th,
 .progress-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
 }
 
 .progress-table th {
-    background-color: #4b6252;
-    color: white;
+  background-color: #4b6252;
+  color: white;
+}
+
+.form-container {
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 20px;
+  border: 1px solid #ddd;
+}
+
+.form-container input[type="date"],
+.form-container input[type="text"],
+.form-container select,
+.form-container input[type="file"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.form-container input[type="file"] {
+  padding: 3px;
+}
+
+.form-container img {
+  margin-top: 10px;
 }
 
 .buttons {
-    display: flex;
-    gap: 10px;
-    margin-top: 20px;
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.buttons-form {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
 }
 
 .btn-add,
 .btn-save,
-.btn-cancel {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.btn-cancel,
+.btn-analyze {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .btn-add {
-    background-color: #4caf50;
-    color: white;
+  background-color: #4caf50;
+  color: white;
+}
+
+
+.btn-analyze {
+  background-color: #49b16f;
+  color: white;
+}
+
+.btn-scan {
+  padding: 0px 10px 0px 10px;
+  height: 100%;
+  width: 100px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #49b16f;
+  color: white;
+}
+
+.btn-load {
+  padding: 0px 10px 0px 10px;
+  height: 100%;
+  width: 100px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #49b16f;
+  color: white;
 }
 
 .btn-save {
-    background-color: #4caf50;
-    color: white;
+  background-color: #4caf50;
+  color: white;
 }
 
 .btn-cancel {
-    background-color: #f44336;
-    color: white;
+  background-color: #f44336;
+  color: white;
 }
 
+.gptresponse{
+  display: flex;
+}
+
+.output-space{
+  width: 100%;
+  height: calc(15vw);
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  border: 2px solid #ccc;
+  padding: 12px 20px;
+  resize: none;
+  margin-top: 10px;
+}
+
+.image-up{
+  display: flex;
+  gap: 5px;
+  width: 400px;
+}
+
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: #49b16f;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: background .2s ease-in-out;
+}
+
+input[type=file] {
+  width: 350px;
+  max-width: 100%;
+  color: #444;
+  padding: 5px;
+  background: #fff;
+  border-radius: 10px;
+  border: 1px solid #555;
+}
